--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,5 @@
 <section class="section">
-    <div class="container">
+    <div class="container-main">
       <h2 class="visually-hidden">Gallery</h2>
       <ul class="gallery">
         <li class="gallery__item">
