--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,25 +13,25 @@
         <nav class="nav">
             <ul class="home-nav">
                 <li class="nav-item">
-                    <a class="nav-link">HOME</a>
+                    <a href="" class="nav-link">HOME</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">MY LIBRARY</a>
+                    <a href="" class="nav-link">MY LIBRARY</a>
                 </li>
             </ul>
             <ul class="library-nav">
                 <li class="nav-item">
-                    <a class="nav-link">WATCHED</a>
+                    <a href="" class="nav-link">WATCHED</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">QUEUE</a>
+                    <a href="" class="nav-link">QUEUE</a>
                 </li>
             </ul>
         </nav>
         <div class="logo">
-            <svg class="logo-icon">
+            <!-- <svg class="logo-icon">
                 <use href=""></use>
-            </svg>
+            </svg> -->
             <span class="logo-name">Filmoteka</span>
         </div>
     </div>
