--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,4 +1,8 @@
+@import './base/base-styles';
+@import './base/reset-styles';
 @import './common';
+@import './utils/visually-hidden';
+@import './utils/vars';
 @import './spiner';
 
 
