changes to murkup

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -3,46 +3,13 @@
       <h2 class="visually-hidden">Gallery</h2>
       <ul class="gallery">
         <li class="gallery__item">
-          <div class="card">
-            <div class="card__wrapper "></div>
-            <p class="card__title"></p>
+          <a href="" class="gallery__item-link"> 
+            <div class="card__wrapper ">
+                <img src="" alt="" loading=""/>
+            </div>
+            <h4 class="card__title"></h4>
             <p class="card__text"></p>
-          </div>
-        </li>
-        <li class="gallery__item">
-          <div class="card">
-            <div class="card__wrapper "></div>
-            <p class="card__title"></p>
-            <p class="card__text"></p>
-          </div>
-        </li>
-        <li class="gallery__item">
-          <div class="card">
-            <div class="card__wrapper "></div>
-            <p class="card__title"></p>
-            <p class="card__text"></p>
-          </div>
-        </li>
-        <li class="gallery__item">
-          <div class="card">
-            <div class="card__wrapper "></div>
-            <p class="card__title"></p>
-            <p class="card__text"></p>
-          </div>
-        </li>
-        <li class="gallery__item">
-          <div class="card">
-            <div class="card__wrapper "></div>
-            <p class="card__title"></p>
-            <p class="card__text"></p>
-          </div>
-        </li>
-        <li class="gallery__item">
-          <div class="card">
-            <div class="card__wrapper"></div>
-            <p class="card__title"></p>
-            <p class="card__text"></p>
-          </div>
+          </a>
         </li>
       </ul>
     </div>
