changes in card-wrapper

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -4,7 +4,7 @@
       <ul class="gallery">
         <li class="gallery__item">
           <a href="" class="gallery__item-link"> 
-            <div class="card__wrapper ">
+            <div class="card-wrapper ">
                 <img src="" alt="" loading=""/>
             </div>
             <h4 class="card__title"></h4>
