--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,16 +1,5 @@
 <header class="header">
     <div class="container">
-        <form class="search-form">
-            <input
-            type="text" 
-            name="searchQuery" 
-            autocomplete="off"
-            placeholder="Movie search"
-            />
-            <button type="button">#</button>
-        </form>
-
-        <nav class="nav">
             <ul class="home-nav">
                 <li class="nav-item">
                     <a href="" class="nav-link">HOME</a>
@@ -19,6 +8,28 @@
                     <a href="" class="nav-link">MY LIBRARY</a>
                 </li>
             </ul>
+
+            <form class="search-form">
+                <input class="form-input"
+                type="text" 
+                name="searchQuery" 
+                autocomplete="off"
+                placeholder="Movie search"
+                />
+                <button type="button">
+                    <svg class="icon-search" width="14" height="14">
+                        <use href="./images/icons.svg#icon-search"></use>
+                    </svg>
+                </button>
+            </form>
+
+            <div class="logo">
+                <svg class="logo-icon" width="32" height="32">
+                    <use href="./images/icons.svg#icon-film"></use>
+                </svg>
+                <span class="logo-name">Filmoteka</span>
+            </div>
+
             <ul class="library-nav">
                 <li class="nav-item">
                     <a href="" class="nav-link">WATCHED</a>
@@ -26,13 +37,6 @@
                 <li class="nav-item">
                     <a href="" class="nav-link">QUEUE</a>
                 </li>
-            </ul>
-        </nav>
-        <div class="logo">
-            <!-- <svg class="logo-icon">
-                <use href=""></use>
-            </svg> -->
-            <span class="logo-name">Filmoteka</span>
-        </div>
+            </ul>        
     </div>
 </header>
