--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -5,7 +5,7 @@
         <li class="gallery-item">
           <a href="" class="gallery-link"> 
             <div class="card ">
-                <img src="" alt="" loading=""/>
+                <!-- <img src="" alt="" loading=""/> -->
             </div>
             <h4 class="card-title"></h4>
             <p class="card-text"></p>
