--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,15 +1,15 @@
 <footer class="footer">
-    <div class="footer__container">
-      <span class="footer__text" 
+    <div class="footer-container">
+      <span class="footer-text" 
         > © 2023 | All Rights Reserved |
       </span>
-      <span class="footer__text" >Developed with</span>
-      <svg class="footer__icon" width="14" height="14">
+      <span class="footer-text" >Developed with</span>
+      <svg class="footer-icon" width="14" height="14">
         <use href="#"></use>
       </svg>
-      <span class="footer__text" >by</span>
+      <span class="footer-text" >by</span>
       <a
-        class="footer__text footer__text_link"
+        class="footer-text footer-link"
         href="#"
       >
         GoIT Students
