--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,5 +1,5 @@
 <div class="modal">
-    <img src="" alt="" width="375">
+    <!-- <img src="" alt="" width="375"> -->
     <h2 class="title">name</h2>
     <ul class="info">
         <li class="info-item">Vote/Votes</li>
