--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,7 +3,11 @@
 @import './common';
 @import './utils/visually-hidden';
 @import './utils/vars';
+
 @import './spiner';
+@import './header';
+@import './gallery';
+@import './footer';
 
 
 
