--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -9,12 +9,17 @@
   }
 }
 .gallery {
-  display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
-  align-items: center;
-  margin-left: -20px;
-  @media screen and (min-width: 768px) and (max-width: 1279) {
+  display: flex;
+  // gap: 16px 32px;
+
+  // display: flex;
+  // flex-wrap: wrap;
+  // flex-direction: column;
+  // align-items: center;
+  // margin-left: -20px;
+
+  @media screen and (min-width: 768px) and (max-width: 1279px) {
     flex-direction: row;
     align-items: flex-start;
     margin-left: -32px;
@@ -23,10 +28,11 @@
     margin-left: -16px;
   }
 }
+
 .gallery-item {
   margin-left: 20px;
   margin-top: 20px;
-  @media screen and (min-width: 768px) and (max-width: 1279) {
+  @media screen and (min-width: 768px) and (max-width: 1279px) {
     flex-basis: calc((100% - (2 * 32px)) / 2);
     margin-left: 32px;
     margin-top: 32px;
@@ -37,20 +43,22 @@
     margin-top: 32px;
   }
 }
-.card {
+
+.gallery-card {
   height: 402px;
   margin-bottom: 10px;
   border-radius: 5px;
   overflow: hidden;
   width: 100%;
-  @media screen and (min-width: 768px) and (max-width: 1279) {
+  @media screen and (min-width: 768px) and (max-width: 1279px) {
     height: 455px;
   }
   @media screen and (min-width: 1280px) {
     height: 574px;
   }
 }
-.card-title {
+
+.gallery-title {
   text-transform: uppercase;
   color: rgba(0, 0, 0, 1);
   font-size: 12px;
@@ -61,7 +69,8 @@
     line-height: 1.2;
   }
 }
-.card-text {
+
+.gallery-text {
   color: rgba(185, 47, 44, 1);
   font-size: 12px;
   line-height: 1.17;
