header for main page

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,42 +1,48 @@
 <header class="header">
     <div class="container">
-            <ul class="home-nav">
-                <li class="nav-item">
-                    <a href="" class="nav-link">HOME</a>
-                </li>
-                <li class="nav-item">
-                    <a href="" class="nav-link">MY LIBRARY</a>
-                </li>
-            </ul>
-
-            <form class="search-form">
-                <input class="form-input"
-                type="text" 
-                name="searchQuery" 
-                autocomplete="off"
-                placeholder="Movie search"
-                />
-                <button type="button">
-                    <svg class="icon-search" width="14" height="14">
-                        <use href="./images/icons.svg#icon-search"></use>
-                    </svg>
-                </button>
-            </form>
+           <div class="header-wrap">
+            <div class="nav-wrap">
+                <ul class="home-nav">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">HOME</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">MY LIBRARY</a>
+                    </li>
+                </ul>
+    
+                <form class="search-form">
+                    <input class="form-input"
+                    type="text" 
+                    name="searchQuery" 
+                    autocomplete="off"
+                    placeholder="Movie search"
+                    />
+                    <button type="button">
+                        <svg class="icon-search" width="14" height="14">
+                            <use href="./images/icons.svg#icon-search"></use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
 
             <div class="logo">
-                <svg class="logo-icon" width="32" height="32">
-                    <use href="./images/icons.svg#icon-film"></use>
-                </svg>
-                <span class="logo-name">Filmoteka</span>
+                <a href="#">
+                    <svg class="logo-icon" width="32" height="32">
+                        <use href="./images/icons.svg#icon-film"></use>
+                    </svg>
+                    <span class="logo-name">Filmoteka</span>
+                </a>
             </div>
 
             <ul class="library-nav">
                 <li class="nav-item">
-                    <a href="" class="nav-link">WATCHED</a>
+                    <a href="#" class="nav-link">WATCHED</a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link">QUEUE</a>
+                    <a href="#" class="nav-link">QUEUE</a>
                 </li>
             </ul>        
+           </div>
     </div>
 </header>
