--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,11 +1,11 @@
 <footer class="footer">
     <div class="footer-container">
       <span class="footer-text" 
-        > © 2023 | All Rights Reserved |
+        > &copy 2023 | All Rights Reserved |
       </span>
       <span class="footer-text" >Developed with</span>
       <svg class="footer-icon" width="14" height="14">
-        <use href="#"></use>
+        <use href="/src/images/icons.svg#icon-footer-heart"></use>
       </svg>
       <span class="footer-text" >by</span>
       <a
