--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -24,7 +24,7 @@
       color: rgba(84, 84, 84, 1);
       font-weight: 400;
       font-size: 14px;
-      line-height: 1.14;
+      line-height: 26px;
 
       @media screen and (min-width: 768px){
       font-size: 16px;
