--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -36,12 +36,18 @@
 }
 .gallery-item{
   transform: scale(1);
-  transition: transform (250ms ease-in-out);
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  // transform: scale(1);
+  // transition: transform (250ms ease-in-out);
 }
 .gallery-item:hover{
   cursor: pointer;
   transform: scale(1.04);
+  // border: 1px solid #eeeeee;
+  box-shadow:  0px 2px 2px rgba(0, 0, 0, 0.06),
+    0.5px 1px 2px rgba(0, 0, 0, 0.16);
 }
+
 
 .gallery-title {
   text-transform: uppercase;
