--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,14 +4,14 @@
             <div class="nav-wrap">
                 <ul class="home-nav">
                     <li class="nav-item">
-                        <a href="#" class="nav-link">HOME</a>
+                        <button type="button" class="nav-btn">HOME</button>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">MY LIBRARY</a>
+                        <button type="button" class="nav-btn">MY LIBRARY</button>
                     </li>
                 </ul>
     
-                <form class="search-form">
+                <form class="search-form visually-hidden">
                     <input class="form-input"
                     type="text" 
                     name="searchQuery" 
@@ -37,10 +37,10 @@
 
             <ul class="library-nav">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">WATCHED</a>
+                    <button type="button" class="nav-btn">WATCHED</button>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">QUEUE</a>
+                    <button type="button" class="nav-btn">QUEUE</button>
                 </li>
             </ul>        
            </div>
