--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,10 +4,10 @@
             <div class="nav-wrap">
                 <ul class="home-nav">
                     <li class="nav-item">
-                        <button type="button" class="nav-btn">HOME</button>
+                        <button type="button" class="nav-btn" data-page="home">HOME</button>
                     </li>
                     <li class="nav-item">
-                        <button type="button" class="nav-btn">MY LIBRARY</button>
+                        <button type="button" class="nav-btn" data-page="library">MY LIBRARY</button>
                     </li>
                 </ul>
     
@@ -37,10 +37,10 @@
 
             <ul class="library-nav">
                 <li class="nav-item">
-                    <button type="button" class="nav-btn">WATCHED</button>
+                    <button type="button" class="nav-btn" data-page="watched">WATCHED</button>
                 </li>
                 <li class="nav-item">
-                    <button type="button" class="nav-btn">QUEUE</button>
+                    <button type="button" class="nav-btn" data-page="queue">QUEUE</button>
                 </li>
             </ul>        
            </div>
