--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,1 +1,1 @@
-<div id="pagination" class="tui-pagination custom-tui-pagination"></div>
+<div id="tui-pagination-container" class="tui-pagination"></div>
