--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -48,6 +48,9 @@
     0.5px 1px 2px rgba(0, 0, 0, 0.16);
 }
 
+.gallery-info {
+  padding-left: 5px;
+}
 
 .gallery-title {
   text-transform: uppercase;
