--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,10 +1,10 @@
 .section {
-  padding-top: 20px;
+  // padding-top: 20px;
   padding-bottom: 60px;
   margin: 0px;
   background-color:  #ffff;
   @media screen and (min-width: 768px) {
-    padding-top: 30px;
+    // padding-top: 30px;
     padding-bottom: 60px;
   }
 }
