--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -10,6 +10,7 @@
       <span class="footer-text" >by</span>
       <a
         class="footer-text footer-link"
+        id="teamStudents"
         href="#"
       >
         GoIT Students
