--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,8 +9,7 @@
       </svg>
       <span class="footer-text" >by</span>
       <a
-        class="footer-text footer-link"
-        id="teamStudents"
+        class="footer-text footer-link js-team"
         href="#"
       >
         GoIT Students
