--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,7 +1,7 @@
 <section class="section">
     <div class="container">
       <h2 class="visually-hidden">Gallery</h2>
-      <ul class="gallery">
+      <ul class="gallery js-gallery">
       
       </ul>
     </div>
