--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -21,7 +21,7 @@
             autocomplete="off"
             placeholder="Movie search"
           />
-          <button type="button">
+          <button type="submit">
             <svg class="icon-search" width="14" height="14">
               <use href="./images/icons.svg#icon-search"></use>
             </svg>
