--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -247,3 +247,20 @@ background-image:
     }
 }
 
+.notification {
+    position: absolute;
+    width: 155px;
+    left: 10px;
+    top: 45px;
+    font-family: 'Roboto';
+    font-size: 12px;
+    color: #FFFFFF;
+    @media screen and (min-width: 768px) {
+        left: 10px;
+        top: 50px;
+        }
+    @media screen and (min-width: 1200px) {
+        left: 15px;
+        top: 50px;
+        }
+}
