--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,39 +1,10 @@
-<div class="modal">
-  <!-- <img src="" alt="" width="375"> -->
-  <h2 class="title">name</h2>
-  <ul class="info">
-    <li class="info-item">Vote/Votes</li>
-    <li class="info-item">Popularity</li>
-    <li class="info-item">Original Title</li>
-    <li class="info-item">Genre</li>
-  </ul>
-  <div class="about">
-    <h3>ABOUT</h3>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur est
-      dolores impedit itaque nesciunt, incidunt qui, voluptas animi illum non
-      iusto asperiores doloribus. Asperiores voluptatibus labore enim? In
-      ducimus fuga quia iusto voluptatem, totam maiores minus at quibusdam? Sit
-      voluptatibus in saepe quibusdam! Corporis aliquid magnam voluptates,
-      voluptatibus maxime itaque.
-    </p>
-  </div>
-  <ul class="buttons">
-    <li>
-      <buttom class="btn-modal" type="submit" data-action="add-to-watch"
-        >ADD TO WATCHED</buttom
-      >
-    </li>
-    <li>
-      <buttom class="btn-modal" type="submit" data-action="add-to-queue"
-        >ADD TO QUEUE</buttom
-      >
-    </li>
-  </ul>
+<a href="#" class="js-open-modal" data-modal="1">Открыть окно 1</a>
 
-  <button class="btn-close" type="button">
-    <svg>
-      <use>#</use>
-    </svg>
-  </button>
+<div class="modal" data-modal="1">
+   <!--   Svg иконка для закрытия окна  -->
+   <svg class="modal__cross js-modal-close" xmlns="http://www.w3.org/2000/svg"               viewBox="0 0 24 24"><path d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"/></svg>
+   <p class="modal__title">Заголовок окна 1</p>
 </div>
+
+<!-- Подложка под модальным окном -->
+<div class="overlay js-overlay-modal"></div>
