--- a/src/sass/_spiner.scss
+++ b/src/sass/_spiner.scss
@@ -1,21 +1,19 @@
-.spinner {
-  margin: 80px auto;
-  text-align: center;
-
-  svg {
-    height: 96px;
-    width: 96px;
-    fill: #c14f62;
-    animation: rotate 2s infinite linear;
-  }
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out;
 }
 
-@keyframes rotate {
-  0% {
-    transform: rotate(0);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
+.preloader img {
+  max-width: 50%;
+  height: auto;
 }
