--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -116,8 +116,7 @@ background-image:
     font-size: 12px;
     line-height: 1.17;
 
-    transition: color $duration $cubic,
-                background-color $duration $cubic;
+    // transition: color $duration $cubic, background-color $duration $cubic;
 
     @media screen and (min-width: 768px) {
         padding: 12px 24px;
