--- a/src/sass/utils/_vars.scss
+++ b/src/sass/utils/_vars.scss
@@ -15,17 +15,17 @@ $desktop: 1280px;
 
 $black-text-cl: #000000;
 $white-text-cl: #ffffff;
-$accent-text-cl: #ff001b;
+$accent-text-cl: #B92F2C;
 $modal-text-cl: #8c8c8c;
 $footer-text-cl: #545454;
 
-$warning-text-cl: #ff001b;
+$warning-text-cl: #B92F2C;
 
-$focus-cl: #ff001b;
+$focus-cl: #B92F2C;
 
 $background-cl: #e5e5e5;
 $background-footer-cl: #f7f7f7;
-$background-accent-cl: #ff001b;
+$background-accent-cl: #B92F2C;
 $background-header-cl: rgba(0, 0, 0, 0.56);
 
 /* Animation cubic timing function */
