--- a/src/sass/_spiner.scss
+++ b/src/sass/_spiner.scss
@@ -14,6 +14,13 @@
 }
 
 .preloader img {
-  max-width: 50%;
+  max-width: 150%;
   height: auto;
+  @media screen and (min-width: 768px) {
+      max-width: 100%;
+    }
+  
+    @media screen and (min-width: 1200px) {
+      max-width: 75%;
+    }
 }
