--- a/src/sass/components/_buttonUp.scss
+++ b/src/sass/components/_buttonUp.scss
@@ -1,6 +1,7 @@
 .go-top {
   position: fixed;
-  right: 150px; 
+  // right: 150px;
+  right: 7%;
   top: 90%; 
   transform: translateY(-50%); 
   cursor: pointer; 
