--- a/src/sass/components/_modalFilms.scss
+++ b/src/sass/components/_modalFilms.scss
@@ -5,19 +5,20 @@ body.no-scroll {
 .modal-movie {
   background-color: #fff;
 
-  border-radius: 20px;
+  // border-radius: 20px;
   padding: 48px 20px 40px;
 
   scroll-behavior: smooth;
-  overflow-y: hidden;
+  overflow-y: scroll;
 
   @media screen and (max-width: 767px) {
     width: 85dvw;
-    height: 95dvh;
+    // height: 95dvh;
   }
   @media screen and (min-width: $tablet) {
     width: 704px;
     padding: 40px 72px 40px 36px;
+    overflow-y: hidden;
   }
 
   @media screen and (min-width: $desktop) {
@@ -83,19 +84,19 @@ body.no-scroll {
   border-radius: 4px;
   @media screen and (min-width: $mobile) and (max-width: 767px) {
     width: 240px;
-    height: 357px;
+    // height: 357px;
 
     margin-bottom: 20px;
   }
 
   @media screen and (min-width: $tablet) and (max-width: 1279px) {
     width: 264px;
-    height: 374px;
+    // height: 374px;
   }
 
   @media screen and (min-width: $desktop) {
     width: 375px;
-    height: 478px;
+    // height: 478px;
   }
 }
 
@@ -162,9 +163,10 @@ body.no-scroll {
 .movie-title {
   font-weight: 500;
   font-size: 20px;
-  line-height: 1.17;
+  line-height: 1.15;
   margin-bottom: 20px;
   text-transform: uppercase;
+
   @media screen and (min-width: $tablet) and (max-width: 1279px) {
     margin-left: 68px;
   }
@@ -235,6 +237,7 @@ body.no-scroll {
   display: flex;
   font-weight: 500;
   font-size: 12px;
+  text-transform: uppercase;
   line-height: 1.33;
   margin-bottom: 8px;
   margin-top: 20px;
@@ -281,39 +284,42 @@ body.no-scroll {
 }
 
 .movie-item_button {
-  display: flex;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
+  height: 34px;
+  padding: 10px 13px;
   font-weight: 500;
   font-size: 12px;
-  line-height: 1.33;
+  line-height: 1.17;
   text-transform: uppercase;
   cursor: pointer;
   color: $black-text-cl;
   background-color: $white-text-cl;
   border: 1px solid rgba(0, 0, 0, 1);
-  border-radius: 5px;
+  border-radius: 100px;
   transition: background-color $cubic, color $cubic;
 
   &:hover,
   &:focus {
     background-color: $background-accent-cl;
     color: $white-text-cl;
+    border: 1px solid $background-accent-cl;
   }
 
-  @media screen and (min-width: $mobile) and (max-width: 767px) {
-    width: 110px;
-    height: 44px;
-  }
+  // @media screen and (min-width: $mobile) and (max-width: 767px) {
+  //   width: 110px;
+  //   height: 44px;
+  // }
 
   @media screen and (min-width: $tablet) {
-    width: 125px;
-    height: 44px;
+    padding: 12px 18px;
+    height: 38px;
   }
 
   @media screen and (min-width: $desktop) {
-    width: 136px;
-    height: 44px;
+    padding: 14px 32px;
+    height: 42px;
   }
 }
 .hover {
