buttonUp quick fixes
- Changed png to svg icon
- Changed styles of a button

--- a/src/partials/buttonUp.html
+++ b/src/partials/buttonUp.html
@@ -1,4 +1,7 @@
 <div class="go-top">
-    <img src="/src/images/btnUp.png" alt="BtnUP">
+  <button type="button" class="topbtn-style">
+    <svg width="50px" height="50px">
+      <use href="./images/icons.svg#button-up"></use>
+    </svg>
+  </button>
 </div>
-
