--- a/src/sass/components/_buttonUp.scss
+++ b/src/sass/components/_buttonUp.scss
@@ -1,15 +1,29 @@
 .go-top {
   position: fixed;
-  // right: 150px;
-  right: 7%;
+  width: 30px;
+  height: 30px;
+  right: 5%;
   top: 90%; 
   transform: translateY(-50%); 
   cursor: pointer; 
   display: none;
-  font-size: 20px;
-  padding: 15px 10px;
 }
 
 .go-top--show {
   display: block;
+}
+
+.topbtn-style {
+  background-color: transparent;
+  fill: $background-accent-cl;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+
+.topbtn-style:hover,
+.topbtn-style:focus {
+  transform: scale(1.06);
+  box-shadow: 0 2px 2px #0000000f, .5px 1px 2px #00000029;
 }
