adds font-weight

--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -52,6 +52,7 @@
 .gallery-title {
   text-transform: uppercase;
   color: rgba(0, 0, 0, 1);
+  font-weight: 500;
   font-size: 12px;
   line-height: 1.17;
   margin-bottom: 4px;
