--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -64,6 +64,7 @@
 
 .gallery-text {
   color: rgba(185, 47, 44, 1);
+  font-weight: 500;
   font-size: 12px;
   line-height: 1.17;
   margin-bottom: 4px;
