--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -30,10 +30,8 @@
       </div>
 
       <div class="logo">
-        <a href="#">
-          <svg class="logo-icon" width="32" height="32">
-            <use href="./images/icons.svg#icon-film"></use>
-          </svg>
+        <a href="./">
+          <img class="logo-img" src="./images/new-favicon.png" width="32" height="32">
           <span class="logo-name">Filmoteka</span>
         </a>
       </div>
