--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -215,7 +215,11 @@ background-image:
     }
 }
 
-.logo-icon {
+.logo-img {
+    display: inline-block;
+    width: 32px;
+    height: 32px;
+
     @media screen and (min-width: 768px) {
         width: 40px;
         height: 40px;
