add scroll on modal

--- a/src/sass/components/_modalFilms.scss
+++ b/src/sass/components/_modalFilms.scss
@@ -13,7 +13,7 @@ body.no-scroll {
 
   @media screen and (max-width: 767px) {
     width: 85dvw;
-    // height: 95dvh;
+    height: 95dvh;
   }
   @media screen and (min-width: $tablet) {
     width: 704px;
