--- a/src/sass/components/_team.scss
+++ b/src/sass/components/_team.scss
@@ -1,11 +1,11 @@
 .modal-container {
   background-color: #fff;
 
-  border-radius: 20px;
+  border-radius: 5px;
   padding: 48px 20px 40px;
 
   scroll-behavior: smooth;
-  overflow-y: hidden;
+  overflow-y: scroll;
 
   @media screen and (max-width: 767px) {
     width: 85dvw;
@@ -47,7 +47,7 @@
   display: block;
   width: 100%;
   height: 178px;
-  object-fit: cover;
+  object-fit: contain;
   transition: all 0.4s;
 }
 .team-image:hover {
