--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,7 +7,7 @@
             <button type="button" class="nav-btn" data-page="home">HOME</button>
           </li>
           <li class="nav-item">
-            <button type="button" class="nav-btn" data-page="library">
+            <button type="button" class="nav-btn active" data-page="library">
               MY LIBRARY
             </button>
           </li>
