--- a/src/sass/components/_modalFilms.scss
+++ b/src/sass/components/_modalFilms.scss
@@ -3,6 +3,7 @@ body.no-scroll {
 }
 
 .modal-movie {
+  position: relative;
   background-color: #fff;
 
   // border-radius: 20px;
@@ -40,7 +41,6 @@ body.no-scroll {
 
 .button-close {
   position: absolute;
-  z-index: 100;
   top: 8px;
   right: 8px;
   display: flex;
@@ -48,32 +48,19 @@ body.no-scroll {
   align-items: center;
   width: 30px;
   height: 30px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  background-color: initial;
-  border-radius: 50%;
-  cursor: pointer;
-  margin-top: 8px;
-  margin-right: 8px;
-  transform: scale(1);
-  transition: border-color $cubic, background-color $cubic, transform $cubic;
+  padding: 0;
+  background-color: transparent;
 
-  &:hover,
-  &:focus {
-    background-color: $background-accent-cl;
-    border-color: $background-accent-cl;
-    transition: border-color $cubic, background-color $cubic, transform $cubic;
-  }
+  transition: color 250ms $cubic;
 }
-.modal-btn--close {
-  font-family: inherit;
-  color: inherit;
-  position: absolute;
-  top: 2px;
-  right: 16px;
-  font-size: 35px;
-  cursor: pointer;
-  border: none;
-  background: none;
+
+.icon-close {
+  stroke: black;
+}
+
+.button-close:hover .icon-close,
+.button-close:focus .icon-close {
+  stroke: $accent-text;
 }
 
 .movie-card {
