--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,10 +4,10 @@
       <div class="nav-wrap">
         <ul class="home-nav">
           <li class="nav-item">
-            <button type="button" class="nav-btn" data-page="home">HOME</button>
+            <button type="button" class="nav-btn active" data-page="home">HOME</button>
           </li>
           <li class="nav-item">
-            <button type="button" class="nav-btn active" data-page="library">
+            <button type="button" class="nav-btn" data-page="library">
               MY LIBRARY
             </button>
           </li>
