--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,8 +9,9 @@
       </svg>
       <span class="footer-text" >by</span>
       <a
-        class="footer-text footer-link js-team"
+        class="footer-text footer-link "
         href="#"
+        data-team-open
       >
         GoIT Students
       </a>
