--- a/src/sass/components/_team.scss
+++ b/src/sass/components/_team.scss
@@ -1,99 +1,242 @@
-.modal-container {
-  background-color: #fff;
-
-  border-radius: 20px;
-  padding: 48px 20px 40px;
-
-  scroll-behavior: smooth;
-  overflow-y: hidden;
-
-  @media screen and (max-width: 767px) {
-    width: 85dvw;
-    height: 95dvh;
-  }
-  @media screen and (min-width: $tablet) {
-    width: 704px;
-  }
-
-  @media screen and (min-width: $desktop) {
-    width: 806px;
-  }
+.visually-hidden {
+  visibility: hidden;
 }
-.team-wrapper {
-  max-width: 1140px;
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 20px;
-
-  @media screen and (min-width: 768px) {
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 24px;
-  }
-  justify-content: center;
-  padding: 0;
-  list-style: none;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 25px;
-}
-.team-card {
-  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
-  border-radius: 11px;
+.teamdrop {
+  position: fixed;
   overflow: hidden;
-  cursor: pointer;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  opacity: 1;
+  z-index: 10;
+  background-color: rgba(0, 0, 0, 0.2);
 }
-.team-image {
-  display: block;
-  width: 100%;
-  height: 178px;
-  object-fit: cover;
-  transition: all 0.4s;
+.team__modal {
+  position: absolute;
+  display: flex;
+  background-attachment: fixed;
+  height: 530px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  width: 70%;
+  left: 50%;
+  top: 5%;
+  background-color: #ffffff;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
-.team-image:hover {
-  transform: scale(1.1);
+@media screen and (min-width: 768px) {
+  .team__modal {
+    overflow: hidden;
+  }
 }
-.team-info {
-  display: grid;
-  grid-template-columns: 1fr;
-  padding: 18px;
-  text-align: center;
-  font-size: 10px;
-  line-height: calc(19 / 16);
-  letter-spacing: 0.03em;
+.modal-close-button {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  padding: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  border-color: transparent;
+}
+.modal__icon {
+  position: relative;
+  display: flex;
+  justify-content: end;
+  width: 30px;
+  height: 30px;
+  fill: black;
+  align-items: center;
+}
+.modal__icon:hover {
+  fill: #ff6b01;
+  animation-name: spin;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
 }
 
-.team-name {
+@keyframes spin {
+  0% {
+    transform: scale(1.2);
+  }
+
+  100% {
+    transform: scale(1.8);
+  }
+}
+@media screen and (min-width: 767px) {
+  .team__modal {
+    width: 704px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+  }
+}
+@media screen and (min-width: 1279px) {
+  .team__modal {
+    width: 806px;
+    height: 558px;
+    padding: 40px 12px;
+  }
+}
+// team cards
+.team__container {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+}
+.team__list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -24px;
+  margin-top: -24px;
+  justify-content: center;
+  align-items: center;
+}
+.team__card {
+  width: 106px;
+  height: 151px;
+  background: rgba(174, 174, 174, 0.38);
+  box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+  flex-basis: calc(320px / 2 - 48px);
+  margin-top: 24px;
+  margin-right: 24px;
+}
+  .team__card:last-child {
+    margin-bottom: 32px;
+  }
+@media screen and (min-width: 768px) {
+  .team__card {
+    width: calc((768px - 50px)  / 4);
+    margin-right: 32px;
+    margin-bottom: 32px;
+  }
+}
+@media screen and (min-width: 1279px) {
+  .team__card {
+    width: 126px;
+    height: 185px;
+  }
+}
+.team__title {
+  margin-top: 32px;
+  margin-bottom: 32px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  
+  color: var(--primary-text-color);
+}
+@media screen and (min-width: 767px) {
+  .team__title {
+    font-size: 24px;
+    line-height: 28px;
+  }
+}
+@media screen and (min-width: 1279px) {
+  .team__title {
+    margin-top: 0px;
+    font-size: 30px;
+    line-height: 35px;
+  }
+}
+.team__image {
+  margin-top: 10px;
+  margin-right: auto;
+  margin-left: auto;
+  width: 86px;
+  height: 86px;
+  border-radius: 15px;
+}
+
+@media screen and (min-width: 1279px) {
+  .team__image {
+    width: 110px;
+    height: 100px;
+  }
+}
+.team__name {
+ margin-top: 10px;
+ font-weight: 500;
+ font-size: 12px;
+ line-height: 16px;
+ text-align: center;
+ text-transform: uppercase;
+ color: var(--primary-text-color);
+}
+.team__job {
   font-weight: 500;
   font-size: 12px;
   line-height: 16px;
-  @media screen and (min-width: 768px) and (max-width: 1279px) {
-    font-size: 16px;
-    line-height: 16px;
-  }
-  @media screen and (min-width: 1280px) {
-    font-size: 20px;
-    line-height: 18px;
+  text-align: center;
+  color: #8c8c8c;
+}
+// github link
+.team__card
+.github__wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.github__wrapper {
+  cursor: pointer;
+  height: 30px;
+  width: 30px;
+  color: #000000;
+  border-radius: 10px;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
+  background: var(--accent-color);
+  transition: 1s;
+}
+@media screen and (max-width: 1279px) {
+  .github__wrapper {
+    visibility: hidden;
   }
 }
-.team-role {
-  font-weight: 400;
-  font-size: 10px;
+
+.github__wrapper a {
+  width: 0px;
+  overflow: hidden;
+  transition: 1s;
+  text-align: center;
+}
+
+.github__wrapper:hover {
+  width: 105px;
+  border-radius: 5px;
+  background: var(--accent-color);
+}
+
+.github__wrapper:hover a {
+  padding: 2px;
+  width: max-content;
+}
+
+.github__link {
+  margin-top: 10px;
+  font-weight: 500;
+  font-family: var(--primary-font-family);
+  font-size: 12px;
   line-height: 16px;
-  @media screen and (min-width: 768px) and (max-width: 1279px) {
-    font-size: 14px;
-    line-height: 16px;
-  }
-  @media screen and (min-width: 71280px) {
-    font-size: 16px;
-    line-height: 16px;
-  }
+  margin-top: auto;
+  margin-bottom: auto;
+  text-decoration: none;
+  color: #000000;
 }
-.logo-icon {
-  width: 16px;
-  height: 16px;
-  @media screen and (min-width: 768px) {
-    width: 24px;
-    height: 24px;
-  }
+
+.github__icon {
+  fill: #000000;
 }
