--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -13,3 +13,4 @@
 @import './components/modalFilms';
 @import './components/team';
 @import './components/pagination';
+@import './components/registrationModal';
