--- a/src/partials/modal-registr.html
+++ b/src/partials/modal-registr.html
@@ -1,4 +1,4 @@
-<div id="register-modal" class="modal-registr">
+<div id="register-modal" class="register-modal">
   <div class="modal-content">
     <span class="close">&times;</span>
     <h2>Регистрация</h2>
