--- a/src/sass/components/_registrationModal.scss
+++ b/src/sass/components/_registrationModal.scss
@@ -1,7 +1,7 @@
 
 
 /* Стили для модального окна */
-.modal-registr {
+.register-modal {
   display: none;
   position: fixed;
   z-index: 1;
@@ -56,16 +56,4 @@ input {
   font-size: 16px;
 }
 
-button[type="submit"] {
-  padding: 10px;
-  border: none;
-  border-radius: 5px;
-  background-color: #007bff;
-  color: #fff;
-  cursor: pointer;
-}
-
-button[type="submit"]:hover {
-  background-color: #0069d9;
-}
 
